package Common;

enum EnumDotationFamily {
   munition                                         = 0;
   carburant                                        = 1;
   explosif                                         = 2;
   mine                                             = 3;
   barbele                                          = 4;
   piece                                            = 5;
   ration                                           = 6;
}

enum EnumAmmunitionFamily {
   obus                                             = 0;
   missile_sol                                      = 1;
   missile_air                                      = 2;
   mitraille                                        = 3;
}

enum EnumPrecipitationType {
   pas_de_precipitation                             = 0;
   tempete_sable                                    = 1;
   brouillard                                       = 2;
   crachin                                          = 3;
   pluie                                            = 4;
   neige                                            = 5;
}

enum EnumLightingType {
   jour_sans_nuage_                                 = 0;
   jour_peu_nuageux_                                = 1;
   jour_moyennement_nuageux_                        = 2;
   jour_assez_nuageux_                              = 3;
   jour_tres_nuageux_                               = 4;
   nuit_pleine_lune_                                = 5;
   nuit_trois_quart_de_lune_                        = 6;
   nuit_demi_lune_                                  = 7;
   nuit_quart_de_lune_                              = 8;
   nuit_nouvelle_lune_                              = 9;
   eclairant_                                       = 10;
   globalMeteoType_                                 = 11;
}

enum EnumLogMaintenanceHandlingStatus {
   deplacement_vers_chaine                          = 0;
   attente_disponibilite_remorqueur                 = 1;
   remorqueur_deplacement_aller                     = 2;
   remorqueur_chargement                            = 3;
   remorqueur_deplacement_retour                    = 4;
   remorqueur_dechargement                          = 5;
   diagnostique_maintenance                         = 6;
   attente_prise_en_charge_par_niveau_superieur     = 7;
   attente_disponibilite_pieces                     = 8;
   attente_disponibilite_reparateur                 = 9;
   reparation                                       = 10;
   retour_pion                                      = 11;
   termine_maintenance                              = 12;
}

enum EnumLogMedicalHandlingStatus {
   attente_disponibilite_ambulance_releve           = 0;
   ambulance_releve_deplacement_aller               = 1;
   ambulance_releve_chargement                      = 2;
   attente_chargement_complet_ambulance_releve      = 3;
   ambulance_releve_deplacement_retour              = 4;
   ambulance_releve_dechargement                    = 5;
   attente_disponibilite_medecin_pour_diagnostique  = 6;
   diagnostique                                     = 7;
   recherche_secteur_tri                            = 8;
   attente_disponibilite_medecin_pour_tri           = 9;
   tri                                              = 10;
   recherche_secteur_soin                           = 11;
   attente_disponibilite_medecin_pour_soin          = 12;
   soin                                             = 13;
   hospitalisation                                  = 14;
   attente_disponibilite_ambulance_ramassage        = 15;
   ambulance_ramassage_chargement                   = 16;
   attente_chargement_complet_ambulance_ramassage   = 17;
   ambulance_ramassage_deplacement_aller            = 18;
   ambulance_ramassage_dechargement                 = 19;
   termine                                          = 20;
}

enum EnumUnitVisibility {
   invisible                                        = 0;
   detected                                         = 1;
   recognized                                       = 2;
   identified                                       = 3;
   recorded                                         = 4;
}

enum EnumFireEffectType {
   fumigene                                         = 0;
   eclairant                                        = 1;
}

enum EnumSimulationState {
   running                                          = 0;
   paused                                           = 1;
   stopped                                          = 2;
   loading                                          = 3;
}

enum EnumMeetingEngagementStatus {
   none_meeting                                     = 0;
   etat_esquive                                     = 1;
   etat_fixe                                        = 2;
   etat_poursuite_mission                           = 3;
}

enum EnumOperationalStatus {
   detruit_totalement                               = 0;
   detruit_tactiquement                             = 1;
   operationnel                                     = 2;
}

enum MsgStartUnitFire_type {
   direct                                           = 0;
   indirect                                         = 1;
}

message MsgTeam {
   required int32                       oid                 = 1;
}

message MsgPopulation {
   required int32                       oid                 = 1;
}

message MsgAutomat {
   required int32                       oid                 = 1;
}

message MsgUnit {
   required int32                       oid                 = 1;
}

message MsgArmy {
   required int32                       oid                 = 1;
}

message MsgKnowledgeGroup {
   required int32                       oid                 = 1;
}

message MsgUnitFire {
   required int32                       oid                 = 1;
}

message MsgDotationStock {
   required int32                       ressource_id        = 1;
   required int32                       quantite_disponible = 2;
}

message MsgHeading {
   required int32                       heading             = 1;
}

message MsgUnitType {
   required int32                       type                = 1;
}

message MsgListOID {
   repeated int32                       elem                = 1;
}

message MsgDateTime {
   required string                      data                = 1;
}

message MsgDotationQuota {
   required int32                       ressource_id        = 1;
   required int32                       quota_disponible    = 2;
}

message SeqOfDotationQuota {
   repeated MsgDotationQuota            elem                = 1;
}

message MsgControlStop   {}
message MsgControlPause  {}
message MsgControlResume {}

message MsgExercise  {
   required string	name		= 1; 
   optional bool	running  	= 2 [default = false]; 
}

message MsgNetworkAddress  {
   required string	IP		= 1; 
   required int32	port  		= 2 [default = 8080]; 
}

enum EnumAutomatMode {
   embraye                                          = 0;
   debraye                                          = 1;
}

enum EnumPopulationAttitude{
   calme                                            = 0;
   agitee                                           = 1;
   excitee                                          = 2;
   agressive                                        = 3;
}

enum EnumUnitTiredness {
   normal                                           = 0;
   fatigue                                          = 1;
   epuise                                           = 2;
}

enum EnumUnitMorale {
   fanatique                                        = 0;
   bon                                              = 1;
   moyen                                            = 2;
   mauvais                                          = 3;
}

enum EnumUnitExperience {
   veteran                                          = 0;
   experimente                                      = 1;
   conscrit                                         = 2;
}

enum EnumHumanRank {
   officier                                         = 0;
   sous_officer                                     = 1;
   mdr                                              = 2;
}

enum EnumDiplomacy {
   unknown_diplo                                    = 0;
   friend_diplo                                     = 1;
   enemy_diplo                                      = 2;
   neutral_diplo                                    = 3;
}

message MsgLine {
   required MsgLocation                 location            = 1;
}

message MsgControlChangeTimeFactor {
   required int32                       time_factor         = 1;
}

message MsgAutomatChangeKnowledgeGroup {
   required int32                       oid                         = 1;
   required int32                       oid_camp                    = 2;
   required int32                       oid_groupe_connaissance     = 3;
}

message MsgAutomatChangeLogisticLinks {
   required int32                       oid                 = 1;
   optional int32                       oid_tc2             = 2;
   optional int32                       oid_maintenance     = 3;
   optional int32                       oid_sante           = 4;
   optional int32                       oid_ravitaillement  = 5;
}

message MsgAutomatChangeSuperior_oid_superior {
   optional MsgFormation                formation           = 1;
   optional MsgAutomat                  automate            = 2;
}

message MsgAutomatChangeSuperior {
   required int32                                   oid             = 1;
   required MsgAutomatChangeSuperior_oid_superior   oid_superior    = 2;
}

message MsgUnitChangeSuperior {
   required uint32 oid          = 1;
   required uint32 oid_automate = 2;
}

message MsgAutomatList {
   repeated MsgAutomat elem = 1;
}

enum EnumHumanWound {
   non_blesse             = 0;
   mort                   = 1;
   blesse_urgence_1       = 2;
   blesse_urgence_2       = 3;
   blesse_urgence_3       = 4;
   blesse_urgence_extreme = 5;
}

enum EnumLogMaintenanceRegimeTravail {
   regime_1 = 0;
   regime_2 = 1;
   regime_3 = 2;
   regime_4 = 3;
}

message MsgLogMedicalPriorities {
   repeated EnumHumanWound elem = 1;
}

message MsgPolygon {
   required MsgLocation location = 1;
}

message MsgPath {
   required MsgLocation location = 1;
}

message MsgPathList {
   repeated MsgPath elem = 1;
}

message MsgCoordLatLong {
   required double latitude  = 1;
   required double longitude = 2;
}

message MsgCoordLatLongList {
    repeated MsgCoordLatLong elem = 2;
}

message MsgLocation {
   enum Geometry {
        circle  = 0;
        ellipse = 1;
        line    = 2;
        rectangle = 3;
        polygon = 4;
        point   = 5;
        sector  = 6;
        none    = 7;
    }
   required Geometry            type        = 1;
   optional MsgCoordLatLongList coordinates = 2;
}

message MsgPoint {
    required MsgLocation location = 1;
}

message MsgUnitList {
    repeated MsgUnit elem = 1;
}

message MsgPointList {
    repeated MsgPoint elem = 1;
}

message MsgPolygonList {
    repeated MsgPolygon elem = 1;
}

message MsgLocationList {
    repeated MsgLocation elem = 1;
}

message MsgUnitKnowledge {
    required uint32 oid = 1;
}

message MsgUnitKnowledgeList {
   repeated MsgUnitKnowledge elem = 1;
}

message MsgObjectKnowledge {
   required uint32 oid = 1;
}

message MsgObjectKnowledgeList {
   repeated MsgObjectKnowledge elem = 1;
}

message ObstacleType
{
    enum DemolitionTargetType {
       preliminary = 0;
       reserved    = 1;
    }
}

message MsgPlannedWork {
   required string                            type                = 1;
   required MsgLocation                       position            = 2;
   optional ObstacleType.DemolitionTargetType type_obstacle       = 3 [default = preliminary];
   optional float                             densite             = 4 [default = 0];
   optional uint32                            tc2                 = 5 [default = 0];
   optional int32                             activity_time       = 6 [default = 0];
}

message MsgPlannedWorkList {
   repeated MsgPlannedWork   elem = 1;
}

message MsgLogMaintenancePriorities {
   repeated MsgEquipmentType elem = 1;
}

message MsgMissionObjective {
   required MsgLocation localisation = 1;
   required MsgDateTime horaire      = 2;
}

message MsgMissionObjectiveList {
   repeated MsgMissionObjective elem = 1;
}

message MsgLimaOrder {
    enum Function {
        ligne_debouche               = 0;
        ligne_changement_attitude    = 1;
        ligne_coordination           = 2;
        ligne_interdire              = 3;
        ligne_objectif               = 4;
        ligne_coup_arret             = 5;
        ligne_recueil                = 6;
        ligne_debut_mission          = 7;
        ligne_fin_mission            = 8;
        ligne_identification_accueil = 9;
    }
    required MsgLine     lima      = 1;
    required MsgDateTime horaire   = 2;
    repeated Function    fonctions = 3;
}

message MsgLimasOrder {
   repeated MsgLimaOrder elem = 1;
}

message SeqOfDotationStock {
   repeated MsgDotationStock elem = 1;
}

message MsgPopulationKnowledge {
   required uint32 oid = 1;
}

message MsgIntelligence {
   required string          name      = 1;
   required string          nature    = 2;
   required EnumNatureLevel level     = 3;
   required bool            embarked  = 4;
   required MsgCoordLatLong location  = 5;
   required EnumDiplomacy   diplomacy = 6;
   required MsgFormation    formation = 7;
}

message MsgIntelligenceList {
   repeated MsgIntelligence elem = 1;
}

message MsgChangeDiplomacy {
   required uint32        oid_camp1  = 1;
   required uint32        oid_camp2  = 2;
   required EnumDiplomacy diplomatie = 3;
}

message MsgAtlasNature {
   enum AtlasNature
   {
        blinde           = 1;
        ass              = 2;
        pc               = 4;
        log              = 8;
        mortier          = 16;
        lance_roquette   = 32;
        vehicule         = 64;
        personnel_a_pied = 128;
        helicoptere      = 256;
        indefini         = 512;
        asa              = 1024;
        none             = 2048;
   }
   // repeated AtlasNature nature = 1;
   required int32 nature = 1;
}

message MsgEquipmentType {
    required uint32 equipment = 1;
}

message MsgDotationType {
    required uint32 oid = 1;
}

message MsgUrbanBlock {
    required uint32 oid = 1;
}

message MsgUrbanKnowledge {
    required uint32 oid = 1;
}

message MsgMissionParameter {
    message Value {
        optional bool                        aBool                       = 1;
        optional float                       aReal                       = 2;
        optional int32                       enumeration                 = 3;
        optional MsgPath                     path                        = 4;
        optional MsgPathList                 pathList                    = 5;
        optional MsgPoint                    point                       = 6;
        optional MsgPointList                pointList                   = 7;
        optional MsgPolygon                  polygon                     = 8;
        optional MsgPolygonList              polygonList                 = 9;
        optional MsgLocation                 location                    = 10;
        optional MsgLocationList             locationList                = 11;
        optional MsgHeading                  heading                     = 12;
        optional MsgAtlasNature              atlasNature                 = 13;
        optional MsgUnit                     unit                        = 14;
        optional MsgUnitList                 unitList                    = 15;
        optional MsgAutomat                  automat                     = 16;
        optional MsgAutomatList              automatList                 = 17;
        optional MsgUnitKnowledge            unitKnowledge               = 18;
        optional MsgUnitKnowledgeList        unitKnowledgeList           = 19;
        optional MsgObjectKnowledge          objectKnowledge             = 20;
        optional MsgObjectKnowledgeList      objectKnowledgeList         = 21;
        optional MsgPopulationKnowledge      populationKnowledge         = 22;
        optional MsgPlannedWork              plannedWork                 = 23;
        optional MsgPlannedWorkList          plannedWorkList             = 24;
        optional MsgDotationType             dotationType                = 25;
        optional MsgEquipmentType            equipmentType               = 26;
        optional int32                       tirIndirect                 = 27;
        optional MsgDateTime                 dateTime                    = 28;
        optional MsgLogMaintenancePriorities logMaintenancePriorities    = 29;
        optional MsgLogMedicalPriorities     logMedicalPriorities        = 30;
        optional string                      aCharStr                    = 31;
        optional MsgMissionObjective         missionObjective            = 32;
        optional MsgMissionObjectiveList     missionObjectiveList        = 33;
        optional MsgLine                     line                        = 34;
        optional MsgLimasOrder               limasOrder                  = 35;
        optional MsgIntelligenceList         intelligenceList            = 36;
        optional MsgUrbanBlock               urbanBlock                  = 37;
        optional MsgArmy                     army                        = 38;
        optional MsgFormation                formation                   = 39;
        optional uint32                      identifier                  = 40;
        optional int32                       quantity                    = 41;
        optional MsgKnowledgeGroup           knowledgeGroup              = 42;
        repeated Value                       list                   = 43;
    }
    optional bool  null_value = 1 [default = false];
    optional Value value      = 2;
}

message MsgMissionParameters {
   repeated MsgMissionParameter elem = 1;
}

enum EnumNatureLevel {
   none_naturelevel                                 = 0;
   o                                                = 1;
   oo                                               = 2;
   ooo                                              = 3;
   i                                                = 4;
   ii                                               = 5;
   iii                                              = 6;
   x                                                = 7;
   xx                                               = 8;
   xxx                                              = 9;
   xxxx                                             = 10;
   xxxxx                                            = 11;
}

message MsgShape {
   required string                      category            = 1;
   required string                      color               = 2;
   required string                      template_           = 3;
   required MsgCoordLatLongList         points              = 4;
}

message MsgChatTarget {
   required string                      profile             = 1;
}

message MsgTextMessage {
   required MsgChatTarget               source              = 1;
   required MsgChatTarget               target              = 2;
   required string                      message             = 3;
}

message MsgTacticalLine {
    message Diffusion {
       optional uint32 automat   = 1;
       optional uint32 formation = 2;
    }
    required string      name      = 1;
    required MsgLocation geometry  = 2;
    required Diffusion   diffusion = 3;
}

message MsgFormation {
   required int32                       oid                 = 1;
}

message MsgFormationCreation {
   required int32                       oid                     = 1;
   required int32                       oid_camp                = 2;
   optional int32                       oid_formation_parente   = 3 [default = 0];
   required EnumNatureLevel             niveau                  = 4;
   required string                      nom                     = 5;
}

message MsgUnitOrder {
   required int32                       oid                 = 1;
   required int32                       mission             = 2;
   optional MsgMissionParameters        parametres          = 3;
}

message MsgAutomatOrder {
   required int32                       oid                 = 1;
   required int32                       mission             = 2;
   optional MsgMissionParameters        parametres          = 3;
}

message MsgPopulationOrder {
   required int32                       oid                 = 1;
   required int32                       mission             = 2;
   optional MsgMissionParameters        parametres          = 3;
}

message MsgObjectAttributeConstruction {
   optional int32                       dotation_type       = 1 [default = 0];
   optional int32                       dotation_nbr        = 2 [default = 0];
   optional float                       density             = 3 [default = 0];
   optional int32                       percentage          = 4 [default = 0];
}

message MsgObjectAttributeMine {
   optional int32                       dotation_type       = 1 [default = 0];
   optional int32                       dotation_nbr        = 2 [default = 0];
   optional float                       density             = 3 [default = 0];
   optional int32                       percentage          = 4 [default = 0];
}

message MsgObjectAttributeLogistic {
   required int32                       tc2                 = 1;
}

message MsgObjectAttributeInteractionHeight {
   required float                       height              = 1;
}

message MsgObjectAttributeObstacle {
   required ObstacleType.DemolitionTargetType type            = 1;
   optional bool                              activated       = 2;
   optional int32                             activation_time = 3;
}

message MsgObjectAttributeActivityTime {
   required int32                       value               = 1;
}

message MsgObjectAttributeBypass {
   optional int32                       percentage          = 1 [default = 0];
}

message MsgObjectAttributeEffectDelay {
   required int32                       value               = 1;
}

message MsgObjectAttributeNBC {
   required int32                       danger_level        = 1;
   required MsgListOID                  nbc_agents          = 2;
}

message StockResource {
   required MsgDotationType             dotation_type       = 1;
   required int32                       current             = 2;
   optional int32                       maximum             = 3;
}

message MsgObjectAttributeStock {
   repeated StockResource               resources           = 1;
}

message MsgObjectAttributeCrossingSite {
   required int32                       width                   = 1;
   required int32                       depth                   = 2;
   required int32                       flow_rate               = 3;
   required bool                        banks_require_fitting   = 4;
}

message MsgObjectAttributeSupplyRoute {
   required bool                        equipped            = 1;
   required int32                       max_weight          = 2;
   required int32                       width               = 3;
   required int32                       length              = 4;
   required int32                       flow_rate           = 5;
}

message MsgLocatedQuantity{
   required Common.MsgCoordLatLong      coordinate          = 1;
   required float                       quantity            = 2;
}

message MsgLocatedQuantityList {
   repeated MsgLocatedQuantity          elem                = 1;
}

message MsgObjectAttributeToxicCloud {
   required MsgLocatedQuantityList      quantities          = 1;
}

message MsgObjectAttributeFire {
   required int32                       class_id            = 1;
   required int32                       heat                = 2;
}

message MsgObjectAttributeMedicalTreatment {
   required MsgListOID                  type_id             = 1;
   required int32                       beds                = 2;
   required int32                       available_beds      = 3;
   required int32                       doctors             = 4;
   required int32                       available_doctors   = 5;
}

message MsgObjectAttributeNBCType {
   required int32 agent_id = 1;
   required int32 concentration = 2;
   required int32 source_life_duration = 3;
}

message MsgObjectAttributeSealOff {
   required int32 level = 1;
}
   
message MsgObjectAttributes {
   optional MsgObjectAttributeConstruction      construction        = 1;
   optional MsgObjectAttributeObstacle          obstacle            = 2;
   optional MsgObjectAttributeMine              mine                = 3;
   optional MsgObjectAttributeActivityTime      activity_time       = 4;
   optional MsgObjectAttributeBypass            bypass              = 5;
   optional MsgObjectAttributeLogistic          logistic            = 6;
   optional MsgObjectAttributeNBC               nbc                 = 7;
   optional MsgObjectAttributeCrossingSite      crossing_site       = 8;
   optional MsgObjectAttributeSupplyRoute       supply_route        = 9;
   optional MsgObjectAttributeToxicCloud        toxic_cloud         = 10;
   optional MsgObjectAttributeFire              fire                = 11;
   optional MsgObjectAttributeMedicalTreatment  medical_treatment   = 12;
   optional MsgObjectAttributeInteractionHeight interaction_height  = 13;
   optional MsgObjectAttributeStock             stock               = 14;
   optional MsgObjectAttributeNBCType           nbc_agent           = 15;
   optional MsgObjectAttributeEffectDelay       effect_delay        = 16;
   optional MsgObjectAttributeSealOff           sealOff             = 17;
}

// LTO Begin
message MsgNote {
    required string                             name                = 1;
    required string                             number	            = 2;
    required string                             description         = 3;
    required uint32                             parent              = 4;
}

// LTO end

// meteo
message MsgMeteoAttributes {
   required int32                        temperature     = 1;
   required int32                        wind_speed      = 2;
   required Common.MsgHeading            wind_direction  = 3;
   required int32                        cloud_floor     = 4;
   required int32                        cloud_ceiling   = 5;
   required int32                        cloud_density   = 6;
   required Common.EnumPrecipitationType precipitation   = 7;
   required Common.EnumLightingType      lighting        = 8;
}

